--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Study!Buddy</string>
     <string name="dark_theme">Dark Theme</string>
     <string name="apps">Apps</string>
+    <string name="note_hint">Go on… Type what you want… Double tap to add images</string>
+    <string name="launcher_settings">Launcher Settings</string>
+    <string name="phone_settings">Phone Settings</string>
+    <string name="default_alarm">Default Alarm</string>
 </resources>
