--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="launcher_settings">Launcher Settings</string>
     <string name="phone_settings">Phone Settings</string>
     <string name="default_alarm">Default Alarm</string>
+    <string name="search_for_apps">Search for Apps</string>
 </resources>
