--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="phone_settings">Phone Settings</string>
     <string name="default_alarm">Default Alarm</string>
     <string name="search_for_apps">Search for Apps</string>
+    <string name="title_activity_launcher_settings">Launcher Settings</string>
+    <string name="default_alarm_time">Default Alarm Time</string>
+    <string name="dummy_time">6:00AM</string>
+
 </resources>
